summative.moria.Moria.scala.code
while (getCouleurSol()!=Color.green)
while (!estSurBiscuit() && !estFaceMur())
	{if (getDirection()!==Direction.EAST){
    gauche()
    gauche()
    avance()}
   else{avance}}
if (estSurBiscuit)
{porteBiscuit();gauche();gauche()}
while (!estSurBiscuit())
    {avance()}
recule();poseBiscuit()
if(estFaceMur){droite();avance();gauche();avance()}